--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <script src="../src/components/Sakura.js"></script>
   <div id="root"></div>
 </body>
 
