--- a/public/index.html
+++ b/public/index.html
@@ -6,29 +6,66 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+
+  <!-- 修改描述为包含关键字 -->
+  <meta name="description" content="Personal portfolio website of Tao Weijie, built with React.js">
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>TaoWeijie | Portfolio</title>
-  <meta name="description" content="Self Developed personal website build with React.js">
+  <title>Tao Weijie | Portfolio</title>
+
+  <!-- 修改页面标题中包含关键字 -->
+  <meta name="description" content="Self-developed personal website by Tao Weijie, showcasing skills and projects">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="TaoWeijie | Portfolio">
-  <meta itemprop="description" content="Self Developed personal website build with React.js">
+  <meta itemprop="name" content="Tao Weijie | Portfolio">
+  <!-- 修改描述中包含关键字 -->
+  <meta itemprop="description" content="Portfolio website of Tao Weijie, showcasing self-developed projects">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="mysite url">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="TaoWeijie | Portfolio">
-  <meta property="og:description" content="Self Developed personal website build with React.js">
+  <!-- 修改标题和描述中包含关键字 -->
+  <meta property="og:title" content="Tao Weijie | Portfolio">
+  <meta property="og:description"
+    content="Explore the personal portfolio of Tao Weijie, featuring self-developed projects">
 
-  <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="TaoWeijie | Portfolio">
-  <meta name="twitter:description" content="Self Developed personal website build with React.js">
+  <meta name="twitter:title" content="Tao Weijie | Portfolio">
+  <meta name="twitter:description"
+    content="Check out the portfolio of Tao Weijie - showcasing personal projects and skills">
 </head>
 
+
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript style="
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #ffffff;
+    color: #000000;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+      Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    gap: 1rem;
+    text-align: center;
+  ">
+    <div>
+      <h1>Portfolio de tao weijie</h1>
+      <p>
+        Pour une meilleure expérience, veuillez activer JavaScript dans votre
+        navigateur.
+      </p>
+      <p>
+        Comment faire ?
+        <a href="https://www.enable-javascript.com/fr/" target="_blank" rel="noreferrer"
+          style="text-decoration: underline; text-underline-offset: 0.2em">
+          Cliquez ici
+        </a>
+      </p>
+    </div>
+  </noscript>
   <div id="root"></div>
 </body>
 
