--- a/public/index.html
+++ b/public/index.html
@@ -5,27 +5,24 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="/dist/output.css" rel="stylesheet">
   <meta name="theme-color" content="#000000" />
 
-  <!-- 修改描述为包含关键字 -->
   <meta name="description" content="Personal portfolio website of Tao Weijie, built with React.js">
   <meta name="google-site-verification" content="EyttQtLGWqNX43snsV1N5bem0PCT9vTlKa6ci0C7MkE" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Tao Weijie | Portfolio</title>
 
-  <!-- 修改页面标题中包含关键字 -->
   <meta name="description" content="Self-developed personal website by Tao Weijie, showcasing skills and projects">
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Tao Weijie | Portfolio">
-  <!-- 修改描述中包含关键字 -->
   <meta itemprop="description" content="Portfolio website of Tao Weijie, showcasing self-developed projects">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="mysite url">
   <meta property="og:type" content="website">
-  <!-- 修改标题和描述中包含关键字 -->
   <meta property="og:title" content="Tao Weijie | Portfolio">
   <meta property="og:description"
     content="Explore the personal portfolio of Tao Weijie, featuring self-developed projects">
