rm: useless information

--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,16 @@
   <link href="/dist/output.css" rel="stylesheet">
   <meta name="theme-color" content="#000000" />
 
-  <meta name="description" content="Personal portfolio website of Tao Weijie, built with React.js">
   <meta name="google-site-verification" content="EyttQtLGWqNX43snsV1N5bem0PCT9vTlKa6ci0C7MkE" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Tao Weijie | Portfolio</title>
-
-  <meta name="description" content="Self-developed personal website by Tao Weijie, showcasing skills and projects">
+  <title>Tao Weijie | Portfolio | Open Class</title>
+  <meta name="description"
+    content="Hello, I'm tao weijie, A Full Stack Software Developer, Regularly share new projects and new frameworks.">
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Tao Weijie | Portfolio">
-  <meta itemprop="description" content="Portfolio website of Tao Weijie, showcasing self-developed projects">
+  <meta itemprop="description" content="Portfolio website of tao weijie, showcasing self-developed projects">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="mysite url">
