feat: fix intruduce page tranduction

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <meta name="google-site-verification" content="EyttQtLGWqNX43snsV1N5bem0PCT9vTlKa6ci0C7MkE" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Tao Weijie | Portfolio | Open Class</title>
+  <title>Tao Weijie | Portfolio</title>
   <meta name="description"
     content="Hello, I'm tao weijie, A Full Stack Software Developer, Regularly share new projects and new frameworks.">
 
