feat: seo for share site

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Tao Weijie | Portfolio">
   <meta property="og:description"
-    content="Explore the personal portfolio of Tao Weijie, featuring self-developed projects">
+    content="I am Tao Weijie a software engineer.I offer a wide range of services, including App development, E-commerce website and Open Class Room">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Tao Weijie | Portfolio">
