feat: update the description of the website ```

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Tao Weijie | Portfolio</title>
   <meta name="description"
-    content="Hello, I'm tao weijie, A Full Stack Software Developer, Regularly share new projects and new frameworks.">
+    content="Hello, I'm tao weijie, A Full Stack Software Developer.I offer a wide range of services, including App development, E-commerce website, ERP development and Open Class Room">
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Tao Weijie | Portfolio">
